--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <section id="inline" class="download">
             <div>
                 <p>or you can use it as part of the inline 8chan shit by pasting this into your user js:</p>
-                <code>load_js("http://trashscript.x10.mx/dist/trashscript-0.0.1.min.user.js");</code><br/>
+                <code>load_js("https://trashscript.x10.mx/dist/trashscript-0.0.1.min.user.js");</code><br/>
                 <note>this doesn't work, because fuck ssl</note>
             </div>
         </section>
